manifests/agri-backend/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agri-backend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agri-backend
  namespace: agri-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agri-backend
  template:
    metadata:
      labels:
        app: agri-backend
    spec:
      containers:
        - name: agri-backend
          image: ghcr.io/agrisensenet/agri-backend@sha256:3f15844d31173eeb5057e80e3fd6d64c59898d00f4d3151a6da2c7b4c31fefd3
          ports:
            - name: http
              containerPort: 3001
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: agri-backend
  namespace: agri-backend
  labels:
    app.kubernetes.io/name: agri-backend
spec:
  selector:
    app: agri-backend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
